# ia-rag-scientific-articles

./: .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
chains/: __init__.py  conversational_qa.py
constants/: __init__.py  constants.py
data_collection/: __init__.py  collector.py  preprocess.py
factory/: __init__.py  factory.py
ingests/: __init__.py  embeddings.py  indexing.py
models/: __init__.py  vstore_retriever.py
prompt/: prompts.py
utils/: __init__.py  functions.py  helpers.py
